tests/broken/writ-adjacent-expressions.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ-adjacent-expressions.rs:4:21
  |
4 | #[oxiplate = "{{ foo bar }}"]
  |                     ^^^^^^^
